<resources>
    <string name="app_name">2.Zadaca</string>
    <string name="tab_text_1">Add</string>
    <string name="tab_text_2">Car List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enginePower">Engine Power</string>
    <string name="model">Model</string>
    <string name="age">Age</string>
    <string name="engineType">Engine Type</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="add_button_text">Add</string>
    <string name="carList">Car List</string>
    <string name="add">Add</string>
    <string name="element_text">Placeholder</string>
    <string name="_4_cylinders">4 cylinders</string>
    <string name="_6_cylinders">6 cylinders</string>
    <string name="_8_cylinders">8 cylinders</string>
</resources>